fix(inPageNavigation): menu overlaping headers - FRONT-1248 (#1681)
* FRONT-1248 WIP

* FRONT-1248 fixing navigation overlap and adding "ecl-inpage-navigation__heading" class to headers

* FRONT-1248 yarn lint fixing issues

* FRONT-1248 changing heading selector to BEM compliant

* FRONT-1248 fix formatting

* FRONT-1248 fix formatting

* apply prettier formatting

* FRONT-1248 fix formatting

* FRONT-1248 adding fix to EU, and getting rid of unnecessary class 'ecl-inpage-navigation__heading'

--- a/src/systems/ec/implementations/vanilla/packages/ec-component-inpage-navigation/ec-component-inpage-navigation.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-inpage-navigation/ec-component-inpage-navigation.scss
@@ -193,6 +193,24 @@
   }
 }
 
+@include ecl-media-breakpoint-down('md') {
+  .ecl-inpage-navigation__heading--active {
+    &:first-of-type {
+      padding-top: $ecl-spacing-4-xl;
+    }
+
+    &:not(:first-of-type) {
+      &::before {
+        content: '';
+        display: block;
+        margin-top: -$ecl-spacing-4-xl;
+        padding-top: $ecl-spacing-4-xl;
+        visibility: hidden;
+      }
+    }
+  }
+}
+
 // Use mixin
 @include exports('ec-component-inpage-navigation') {
   @include ecl-inpage-navigation();
